--- a/html/profe.html
+++ b/html/profe.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    
+    <script src="script.js" defer></script>
   </head>
   <body>
     soy dlg soy marcheli soy marcheline soy edu macassi soy op soy el profesor y
@@ -12,27 +14,33 @@
     epc soy asj soy Daniel Góoooómeeez Paaaaarraaaaaaaa soy di
 
     <form action="">
-      Selecciona poblacion: <br><select name="poblacion" >
+      Selecciona poblacion: <br />
+      <select name="poblacion">
         <option value="0">Selecciona poblacion....</option>
         <option value="28">Madrid</option>
         <option value="08">Barcelona</option>
         <option value="06">Badajoz</option>
       </select>
       <button type="submit">enviar</button>
-      <br>
+      <br />
 
-      selecciona deportes: <br>
-      futbol: <input type="checkbox"  name="futbol" aria> <br>
-      baloncesto: <input type="checkbox"  name="baloncesto"> <br>
-      golf: <input type="checkbox"  name="golf"> <br>
-      automovilismo: <input type="checkbox"  name="automovilismo"> <br>
-      natación: <input type="checkbox"  name="natacion"> <br>
-      sexo: <br>
-      hombre: <input type="radio" value="hombre" name="sexo"> <br>
-      mujer: <input type="radio" value="mujer" name="sexo"> <br>
-      descripcion: <textarea name="observaciones" id="" cols="30" rows="10">
+      selecciona deportes: <br />
+      futbol: <input type="checkbox" name="futbol" aria /> <br />
+      baloncesto: <input type="checkbox" name="baloncesto" /> <br />
+      golf: <input type="checkbox" name="golf" /> <br />
+      automovilismo: <input type="checkbox" name="automovilismo" /> <br />
+      natación: <input type="checkbox" name="natacion" /> <br />
+      sexo: <br />
+      hombre: <input type="radio" value="hombre" name="sexo" /> <br />
+      mujer: <input type="radio" value="mujer" name="sexo" /> <br />
+      descripcion:
+      <textarea name="observaciones" id="" cols="30" rows="10">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique quasi fugiat expedita ex fuga! Quasi autem quibusdam repudiandae ratione fuga. Eaque similique ducimus eveniet tempore voluptate quod dolorem quibusdam laborum!
       </textarea>
-    </form> 
+    </form>
+    <h1 id="h1" class="container"></h1>
+    <button onclick="ejemploFor()">sumar</button>
+    <button onclick="letVar()"> letVar</button>
   </body>
 </html>
+
