--- a/ejercicio/tabla.html
+++ b/ejercicio/tabla.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="ejercicio-1.js" defer></script>
 </head>
-
+<script src="numerosprimos.js" defer></script>
 <body>
-    <button onclick="minombrEnMayusculas()">seleccionar</button><h1 id="h1"></h1>
+     <button onclick= "numerosprimos()">seleccionar</button>
+     <table border="1" id="tabla"></table>
     
 </body>
 </html>
