--- a/numerosprimos.html
+++ b/numerosprimos.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Numero Primo</title>
+    <script src="numeroPrimos.js"defer></script>
 </head>
 <body>
-    
+    <button onclick=""> Pulsa el boton Primo</button>
+    <table border="1" id="tabla"></table>
 </body>
 </html>
