--- a/numerosprimos.html
+++ b/numerosprimos.html
@@ -8,7 +8,7 @@
     <script src="numeroPrimos.js"defer></script>
 </head>
 <body>
-    <button onclick=""> Pulsa el boton Primo</button>
-    <table border="1" id="tabla"></table>
+    <button onclick="crearFilaPrimo()"> Pulsa el boton Primo</button>
+    <table border="1" id="tabla1"></table>
 </body>
 </html>
