--- a/index copy 2.html
+++ b/index copy 2.html
@@ -79,88 +79,46 @@
 
           <div class="row align-items-center" style="height:30px; background: aquamarine">
             <div class="col-4">
-              <p>PÁGINA</p>
+              <p>CONSULTA TODOS</p>
             </div>
             <div class="col-4">
-              <p>CON DATOS</p>
+              <p>LOS IDIOMAS</p>
             </div>
             <div class="col-4 align-self-end">
-              <p>GENERALES</p>
+              <p>DEL MUNDO</p>
             </div>
           </div>
 
-
         </div>
-        <div class="mx-auto">
-          <table class="table table-bordered w-100">
-            <tbody class="w-100">
-              <tr class="text-center">
-                <td class="w-50">
-                  Ciudad: XXXXXXXXXX
-                </td>
-                <td></td>
-              </tr>
-              <tr class="text-center">
-                <td>
-                  Población: 99999999999
-                </td>
-                <td></td>
-              </tr>
-              <tr class="text-center">
-                <td>
-                  Área: 99999999999
-                </td>
-                <td></td>
-              </tr class="text-center">
-              <tr class="text-center">
-                <td>
-                  Dominio: XXXXXXXXXX
-                </td>
-                <td></td>
-              </tr>
-              <tr class="text-center">
-                <td>
-                  Moneda:
-                </td>
 
-                <td></td>
-              </tr>
-              <tr class="text-left">
-                <td>
-
-                </td>
-                <td> Nombre:</td>
-              </tr>
-              <tr class="text-left">
-                <td>
-
-                </td>
-                <td> Símbolo: </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
 
       </section>
     </div>
 
-
-
     <div class="mt-3">
       <div class="row">
         <div class="col">
-          <button data-bs-toggle="collapse" data-bs-target="#demo">Collapsible</button>
-
-          <div id="demo" class="collapse">
-            Lorem ipsum dolor text....
-          </div>
-
+          <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo">Idioma 1</button>
+          <div id="demo" class="collapse" class="text-dark">País del Idioma 1</div>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo1">Idioma 2</button>
+          <div id="demo1" class="collapse" class="text-dark">País del Idioma 2</div>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo2">Idioma 3</button>
+          <div id="demo2" class="collapse" class="text-dark">País del Idioma 3</div>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo3">Idioma 4</button>
+          <div id="demo3" class="collapse" class="text-dark">País del Idioma 4</div>
+        </div>
+        <div class="col">
+          <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo4">Idioma 5</button>
+          <div id="demo4" class="collapse" class="text-dark">País del Idioma 5</div>
         </div>
       </div>
-
-
     </div>
-
   </main>
 </body>
 
