--- a/ejercicio numeros primos/elementos.html
+++ b/ejercicio numeros primos/elementos.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <button onclick="numeroPrimos()">Añadir filas</button>
-    <table border="1" id="tabla"></table>
+    <button onclick="numeroPrimos()">Añadir Fila de numero Primos</button>
+    <table border="2" id="tabla"></table>
 </body>
 </html>
