--- a/primos.html
+++ b/primos.html
@@ -7,43 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script src="numerosprimos.js" defer></script>
 
 <body>
-
-    let numerosprimos = <div ,="1, 100"></div>
-
-    console.log(numerosprimos.length)
-    // 100
-
-    <p>Números primos</p>
-
-
-    let numerosprimos = []
-    <numeros class="push">(i)</numeros>
-
-    
-
-for (let step = 0; step < 5; step++) {
-  // Se ejecuta 5 veces, con valores del paso 0 al 4.
-  console.log('Camina un paso hacia el este');
-}
-
-
-    console.log(decadas.0) // error de sintaxis
-    console.log(decadas[0]) // funciona correctamente
-
-
-
-
-    function comprobarBreak(x) {
-    var i = 0;
-    while (i < 6) { if (i==3) break; i++; } return i * x; } <ul>
-        <li></li>
-        <li></li>
-        <li>A</li>
-        </ul>
-
-        <p>¡Fin!</p>
+    <button onclick="numerosprimos ()">seleccionar</button>
+    <table border="1" id=""></table>
 </body>
 
 </html>
