--- a/ejercicioprimos.html
+++ b/ejercicioprimos.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="primo.js" defer></script>
+    <script src="numeroprimo.js" defer></script>
 </head>
 <body>
-   <button onclick="crearprimo()">Añadir Numero Primo</button> 
+   <button onclick="numerosPrimos()">Añadir Numero Primo</button> 
    <table border="1" id="tabla">Numeros Primos</table>
 </body>
 </html>
