--- a/ejercicio primos.html
+++ b/ejercicio primos.html
@@ -8,7 +8,7 @@
     <script src="ejercicio primos.js" defer></script>
 </head>
 <body>
-    <button onclick="numerosPrimos()">Añadir</button>
-    <table border="1" id="tabla"> numerosPrimos</table>
+    <button onclick="numeros_primos()">Añadir</button>
+    <table border="1" id="tabla"></table>
 </body>
 </html>
