--- a/ejercicio/tabla.html
+++ b/ejercicio/tabla.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="numerosprimos.js" defer></script>
+<script src="primos.js" defer></script>
+
 <body>
-     <button onclick= "numerosprimos()">seleccionar</button>
-     <table border="1" id="tabla"></table>
+     <button onclick= "numerosPrimos()">seleccionar</button>
+     <table border="1" id=></table>
     
 </body>
 </html>
