--- a/ejercicio calculadora switch/calculadora.html
+++ b/ejercicio calculadora switch/calculadora.html
@@ -1,34 +1,36 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
+
 <head>
-<title>Calculadora</title> 
-<script type="text/javascript" src="calculadora.js"></script>
+    <title>Calculadora</title>
+    <script src="calculadora.js"></script>
 </head>
+
 <body>
-    <table></table>
-<div class="calculadora"
-<p id="textoPantalla"></p>
-<p>
-<input type="button" class="largo" value="Retr" onclick="()"   />
-<input type="button" class="largo" value="CE" onclick="()"  />
-<input type="button" class="largo" value="C" onclick="()"  />
-</p>
-<p>
-<input type="button" value="1" onclick="numero()" />
-<input type="button" value="2" onclick="numero()" />
-<input type="button" value="3" onclick="numero()" />
-</p>
-<p>
-<input type="button" value="4" onclick="" />
-<input type="button" value="5" onclick="" />
-<input type="button" value="6" onclick="" />
-</p>
-<p>
-<input type="button" value="7" onclick="" />
-<input type="button" value="8" onclick="" />
-<input type="button" value="9" onclick="" />
-</p>
-</div>
+    <table border="1" />
+        <tr>
+            <td colspan="20" heigth"3">
+                <input type="text" value="">
+            </td>
+        </tr>
+        <tr>
+            <td><input type="button" value="1" onclick="calculadora()"></td>
+            <td><input type="button" value="2" onclick="calculadora()"></td>
+            <td><input type="button" value="3" onclick="calculadora()"></td>
+        </tr>
+        <tr>
+            <td><input type="button" value="4" onclick="calculadora()"></td>
+            <td><input type="button" value="5" onclick="calculadora()"></td>
+            <td><input type="button" value="6" onclick="calculadora()"></td>
+        </tr>
+        <tr>
+            <td><input type="button" value="7" onclick="calculadora()"></td>
+            <td><input type="button" value="8" onclick="calculadora()"></td>
+            <td><input type="button" value="9" onclick="calculadora()"></td>
+        </tr>
+        </div>
+    </table>
 </body>
+
 </html>
