--- a/Numerosprimos.html
+++ b/Numerosprimos.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="primos.js" defer></script>
+
 </head>
 
 <body>
-    <h1 id="h1"></h1>
-    <button onclick="minombreenmayuscula()">danielgomez</button>
-    
+    <table border="1" id="tabla">
+    </table>
+    <button onclick="calcularnumerosprimos()">aaaa</button>
 </body>
 
 </html>
