--- a/calculadora.html
+++ b/calculadora.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="calculadora.js"></script>
+    <script src="calculadora.js" defer></script>
 </head>
 
 <body>
@@ -15,24 +15,23 @@
     <table border="1">
         <tr>
             <td colspan="3" height="20">
-                <imput type="number" value="5">
+                <imput type="text" value="5" id="boton">
             </td>
 
         </tr>
         <tr>
-            <td id="#1"><button onclick="calculadoraA()">1</button></td>
-            <td id="#2"><button onclick="calculadoraA()">2</button></td>
-            <td id="#3"><button onclick="calculadoraA()">3</button></td>
+            <td><button onclick="operar(1)">1</button></td>
+            <td><button onclick="operar(2)">2</button></td>
+            <td><button onclick="operar(3)">3</button></td>
+        </tr>      <tr>
+            <td><button onclick="operar(4)">4</button></td>
+            <td><button onclick="operar(5)">5</button></td>
+            <td><button onclick="operar(6)">6</button></td>
         </tr>
         <tr>
-            <td id="#4"><button onclick="calculadoraA()">4</button></td>
-            <td id="#5"><button onclick="calculadoraA()">5</button></td>
-            <td id="#6"><button onclick="calculadoraA()">6</button></td>
-        </tr>
-        <tr>
-            <td id="#7"><button onclick="calculadoraA()">7</button></td>
-            <td id="#8"><button onclick="calculadoraA()">8</button></td>
-            <td id="#9"><button onclick="calculadoraA()">9</button></td>
+            <td><button onclick="operar(7)">7</button></td>
+            <td><button onclick="operar(8)">8</button></td>
+            <td><button onclick="operar(9)">9</button></td>
         </tr>
 
     </table>
