--- a/calculadora.html
+++ b/calculadora.html
@@ -15,7 +15,7 @@
     <table border="1">
         <tr>
             <td colspan="3" height="20">
-                <imput type="text" value="5" id="boton">
+                <input type="text" id="boton">
             </td>
 
         </tr>
