--- a/calculadora.html
+++ b/calculadora.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio Calculadora</title>
     <link rel="stylesheet" href="calculadora.css">
-    <script src="calculador.js"></script>
+    <script src="calculador.js" defer></script>
     <!--https://evelb.es/calculadora-javascript/-->
 
 </head>
