--- a/calculadora.html
+++ b/calculadora.html
@@ -12,7 +12,7 @@
 <body>
     <table class="calculadora" border="1">
         <tr>
-            <td colspan="4"><span id="resultado"></span></td>
+            <td colspan="4"><input id="resultado"></span></td>
         </tr>
         <tr>
             <td><button id="siete">7</button></td>
