--- a/calculadora.html
+++ b/calculadora.html
@@ -23,7 +23,8 @@
             <td><button onclick="operar(1)">1</button></td>
             <td><button onclick="operar(2)">2</button></td>
             <td><button onclick="operar(3)">3</button></td>
-        </tr>      <tr>
+        </tr>
+        <tr>
             <td><button onclick="operar(4)">4</button></td>
             <td><button onclick="operar(5)">5</button></td>
             <td><button onclick="operar(6)">6</button></td>
@@ -32,6 +33,9 @@
             <td><button onclick="operar(7)">7</button></td>
             <td><button onclick="operar(8)">8</button></td>
             <td><button onclick="operar(9)">9</button></td>
+        </tr>
+        <tr>
+            <td><button onclick="operar(0)">0</button></td>
         </tr>
 
     </table>
