--- a/calculadora.html
+++ b/calculadora.html
@@ -16,7 +16,7 @@
     <br>
     <table border="1">
         <tr>
-          <th colspan="4" id="cero">0</th>
+          <td colspan="4"><input type id="resultado"></td>
         </tr>
         <tr>
           <td><button id="1">1</button></td>
