--- a/calculadora/calcualdora.html
+++ b/calculadora/calcualdora.html
@@ -9,30 +9,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
-</head> <script src="calculadorajs.js"></script>
+</head>
+<script src="calculadorajs.js"></script>
 
 <body>
     <table border="1">
         <tr>
             <td colspan="3">
-                <input type="text" onclick="numerosdeCalculadora(pulsar)" >
+                <input type="text" id="texto" onclick="numerosdeCalculadora(value)">
 
             </td>
         </tr>
         <tr>
-            <td ><button type="button" class="btn btn-primary" id="1">1</button></td>
-            <td ><button type="button" class="btn btn-primary">2</button></td>
-            <td ><button type="button" class="btn btn-primary">3</button></td>
+            <td><button type="button" onclick=" numerosdeCalculadora(1)" class="btn btn-primary">1</button></td>
+
+            <td><button type="button" onclick=" numerosdeCalculadora(2)" class="btn btn-primary" id="2">2</button></td>
+            <td><button type="button" onclick=" numerosdeCalculadora(3)" class="btn btn-primary">3</button></td>
         </tr>
         <tr>
-            <td ><button type="button" class="btn btn-primary">4</button></td>
-            <td ><button type="button" class="btn btn-primary">5</button></td>
-            <td ><button type="button" class="btn btn-primary">6</button></td>
+            <td><button type="button" onclick=" numerosdeCalculadora(4)" class="btn btn-primary">4</button></td>
+            <td><button type="button" onclick=" numerosdeCalculadora(5)" class="btn btn-primary">5</button></td>
+            <td><button type="button" onclick=" numerosdeCalculadora(6)" class="btn btn-primary">6</button></td>
         </tr>
         <tr>
-            <td ><button type="button" class="btn btn-primary">7</button></td>
-            <td ><button type="button" class="btn btn-primary">8</button></td>
-            <td ><button type="button" class="btn btn-primary">9</button></td>
+            <td><button type="button" onclick=" numerosdeCalculadora(7)" class="btn btn-primary">7</button></td>
+            <td><button type="button" onclick=" numerosdeCalculadora(8)" class="btn btn-primary">8</button></td>
+            <td><button type="button" onclick=" numerosdeCalculadora(9)" class="btn btn-primary">9</button></td>
         </tr>
     </table>
 </body>
