--- a/calculadora.html
+++ b/calculadora.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src="primos.js" defer></script>
+
+<script src="calculadora.js" defer></script>
 
 <body>
-    <button onclick="numerosPrimos ()">Pulsa Aqui</button>
-    <table border="1" id=""></table>
+    <h1>The th element</h1>
+    <p>Encabezado de la tabla:</p>
 
-
+    <input type="button" value="Calculadora" onclick="calculadora()">
 </body>
 
 </html>
