--- a/paises.html
+++ b/paises.html
@@ -8,7 +8,7 @@
     <script src="paises.js"></script>
 </head>
 <body>
-    <button onclick="cargarPaises()">Pulsar pls</button>
+    <button onclick="cargarPaises(`asia`)">Pulsar pls</button>
     
 </body>
 </html>
