--- a/oscar.html
+++ b/oscar.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="paisesoscar.js"></script>
 </head>
 
 <body>
@@ -35,12 +36,12 @@
                 <form action="" method="post">
                     <div class="row">
                         <div class="col">
-                            Continente:<select name="continente" class="form-select form-select-sm">
+                            Continente:<select name="continente" class="form-select form-select-sm" onchange="cargarPaises(this.value)">
                                 <option value="0">Elige un continente</option>
                                 <option value="africa">Africa</option>
                                 <option value="americas">America</option>
                                 <option value="asia">Asia</option>
-                                <option value="europa">Europa</option>
+                                <option value="europe">Europa</option>
                                 <option value="oceania">Oceania</option>
                             </select>
                         </div>
