--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="css/estilo.css">
+    <script type="text/javascript" src="js/mundo.js" defer></script>
 </head>
 
 <body>
@@ -63,13 +64,13 @@
                                     <label for="continente" class="fs-5"><b>Continente:</b></label>
                                 </div>
                                 <div class="d-inline-block">
-                                    <select class="form-select" name="continente" id="continente">
-                                        <option value="0" selected>Seleccione un continente</option>
-                                        <option value="1" id="">Asia</option>
-                                        <option value="" id="">America</option>
-                                        <option value="" id="">Europa</option>
-                                        <option value="" id="">Oceania</option>
-                                        <option value="" id="">Africa</option>
+                                    <select class="form-select" id="continent">
+                                        <option value="" selected>Seleccione un continente</option>
+                                        <option value="asia" >Asia</option>
+                                        <option value="america" >America</option>
+                                        <option value="europe">Europa</option>
+                                        <option value="oceania">Oceania</option>
+                                        <option value="africa">Africa</option>
 
                                     </select>
                                 </div>
@@ -79,13 +80,8 @@
                                     <label for="pais" class="fs-5"><b>Pais:</b></label>
                                 </div>
                                 <div class="d-inline-block">
-                                    <select class="form-select" name="pais" id="pais">
-                                        <option value="0" selected>Seleccione un país</option>
-                                        <option value="">Japon</option>
-                                        <option value="">EEUU</option>
-                                        <option value="">España</option>
-                                        <option value="">Australia</option>
-                                        <option value="">Sudamerica</option>
+                                    <select class="form-select" id="pais">
+                                        <option value="" selected>Seleccione un país</option>
                                     </select>
                                 </div>
 
