--- a/index.html
+++ b/index.html
@@ -65,13 +65,11 @@
                                 </div>
                                 <div class="d-inline-block">
                                     <select class="form-select" id="continent">
-                                        <option value="" selected>Seleccione un continente</option>
+                                        <option value="europe" selected>Europa</option>
                                         <option value="asia" >Asia</option>
-                                        <option value="america" >America</option>
-                                        <option value="europe">Europa</option>
+                                        <option value="america" >America</option> 
                                         <option value="oceania">Oceania</option>
                                         <option value="africa">Africa</option>
-
                                     </select>
                                 </div>
                             </div>
