--- a/oscar.html
+++ b/oscar.html
@@ -46,7 +46,7 @@
                             </select>
                         </div>
                         <div class="col">
-                            País:<select id="pais" name="pais" class="form-select form-select-sm" onchange="cargarNaciones(this.value)">
+                            País:<select id="paises" name="pais" class="form-select form-select-sm">
                                 <option value="0">Elige un país</option>
                             </select>
                         </div>
