--- a/index-richard.html
+++ b/index-richard.html
@@ -44,7 +44,7 @@
       <div class="row align-middle">
         <div class="col-sm-6">
           <h2>continente</h2>
-          <select onchange="cargarPaises(this.value)" class="form-select">
+          <select class="form-select">
             <option>seleccione continente</option>
             <option value="americas">AMERICAS</option>
             <option>AFRICA</option>
