--- a/index copy-fronteras.html
+++ b/index copy-fronteras.html
@@ -9,72 +9,68 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="paises.js"></script>
 </head>
 
 <body style="background-color:#75969c;">
   <div class="container">
     <header>
       <div class="row">
-        <div class="col-sm-2" ><img src="imagenes/logo.jpg" width="200px" height="200px" 
-            class="rounded-circle"></div>
+        <div class="col-sm-2"><img src="imagenes/logo.jpg" width="200px" height="200px" class="rounded-circle"></div>
         <div class="col-sm-10">
           <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
         </div>
-      </div>    
-    <nav>
-      <div class="mt-3">
-        <ul class="nav nav-tabs nav-justified">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">DATOS GENERALES</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">DATOS GEOGRAFICOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">TRADUCCION</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">BANDERA</a>
-          </li>
-        </ul>
       </div>
-    </nav>
+      <nav>
+        <div class="mt-3">
+          <ul class="nav nav-tabs nav-justified">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">DATOS GENERALES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">DATOS GEOGRAFICOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">TRADUCCION</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">BANDERA</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
     <div class="row align-middle">
 
       <div class="col-sm-6">
         <h2>continente</h2>
 
-        <select class="form-select">
-          <option>seleccione continente</option>
-          <option>AMERICAS</option>
-          <option>AFRICA</option>
-          <option>OCEANIAS</option>
-          <option>EUROPA</option>
-          <option>ASIA</option>
+        <select name="continente" onchange="cargarPaises(this.value)" class="form-select">
+          <option value="0">seleccione continente</option>
+          <option value="americas">AMERICA</option>
+          <option value="africa">AFRICA</option>
+          <option value="oceania">OCEANIA</option>
+          <option value="europe">EUROPA</option>
+          <option value="asia">ASIA</option>
         </select>
       </div>
       <div class="col-sm-6">
         <h2>paises</h2>
-        <select class="form-select">
-          <option>seleccione pais</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-          <option value="3">Three</option>
-          <option value="3">Three</option>
+        <select id="paises" class="form-select">
+          <option value="0">seleccione pais</option>
+
         </select>
       </div>
-       <div class="text-center mt-4">
-      <ul >
-        <h3>frontera</h3>
-        <h3>frontera</h3>
-        <h3>frontera</h3>
-        <h3>frontera</h3>
-        <h3>frontera</h3>
-        
-      </ul>
-    </div>
+      <div class="text-center mt-4">
+        <ul>
+          <h3>frontera</h3>
+          <h3>frontera</h3>
+          <h3>frontera</h3>
+          <h3>frontera</h3>
+          <h3>frontera</h3>
+
+        </ul>
+      </div>
 
 
     </div>
