--- a/oscar.html
+++ b/oscar.html
@@ -32,7 +32,7 @@
             </nav>
         </div>
         <div class="tab-content mt-4">
-            <div id="datos generales" class="container tab-pane active"><br>
+            <div id="datosgenerales" class="container tab-pane active"><br>
                 <form action="" method="post">
                     <div class="row">
                         <div class="col">
@@ -53,10 +53,28 @@
                     </div>
                 </form>
             </div>
+            <table class="table table-stripped">
+                <tr>
+                  <th class="text-center">Capital</th>
+                  <th class="text-center">Población</th>
+                  <th class="text-center">Dominio</th>
+                  <th class="text-center">Área</th>
+                  <th class="text-center">Moneda</th>
+                </tr>
+                <tr>
+                  <td class="text-center">xxx</td>
+                  <td class="text-center">999</td>
+                  <td class="text-center">xxx</td>
+                  <td class="text-center">999</td>
+                  <td class="text-center">xxx</td>
+                </tr>
+          
+              </table>
             <div id="traduccion" class="container tab-pane fade mt-4"><br>
             </div>
             <div id="banderas" class="container tab-pane fade"><br>
             </div>
+
             <div class="container text-center">
                 <h3 class="frontera1">Frontera 1</h3>
                 <h3 class="frontera2">Frontera 2</h3>
