--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                     </div>
                 </nav>
             </header> <!-- FIN DE HEADER-->
+
+            <!--Inicio de select-->
             <section>
                 <div class="row text-center mt-4">
                     <div class="col">
@@ -84,6 +86,8 @@
                     </div>
                 </div>
             </section>
+            <!--FIn de select -->
+            
             <section>
                 <div class="tab-content container mt-3">
                     <div class="tab-pane active" id="generales">
