--- a/index.datosgenerales.html
+++ b/index.datosgenerales.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>datosgenerales</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="imagenes/paises.js"></script>
 </head>
+
 <body style="background-color:#75969c;">
   <div class="container">
     <div class="mt-3">
-    <header>
-      <div class="row">
-        <div class="col-sm-2"><img src="imagenes/logo.jpg" width="200px" height="200px"
-            class="rounded-circle"></div>
-        <div class="col-sm-10">
-          <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
+      <header>
+        <div class="row">
+          <div class="col-sm-2"><img src="imagenes/logo.jpg" width="200px" height="200px" class="rounded-circle"></div>
+          <div class="col-sm-10">
+            <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
+          </div>
         </div>
-      </div>
-      
-    <nav>
-      <div class="mt-3">
-        <ul class="nav nav-tabs nav-justified">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">DATOS GENERALES</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">DATOS GEOGRAFICOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">TRADUCCION</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">BANDERA</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    </header>
+
+        <nav>
+          <div class="mt-3">
+            <ul class="nav nav-tabs nav-justified">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">DATOS GENERALES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">DATOS GEOGRAFICOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">TRADUCCION</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">BANDERA</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
       <div class="row align-middle">
         <div class="col-sm-6">
           <h2>continente</h2>
@@ -73,7 +74,7 @@
         <h2>Población:</h2>
         <h2>Área:</h2>
       </div>
-      <br>
+      
       <div class="col-sm-6">
         <h2>Dominio:</h2>
         <h2>Moneda:</h2>
@@ -88,6 +89,7 @@
       </div>
     </div>
   </div>
-</div>
+  </div>
 </body>
+
 </html>
