--- a/indexdark.html
+++ b/indexdark.html
@@ -127,213 +127,8 @@
         </div>
 
         <div class="row">
-            <div class="col megacol">
-                <ul class="nav nav-tabs nav-justified mt-5 textocabeceras">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-bs-toggle="tab" href="#datos">
-                            <h3>Datos Generales</h3>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#geografia">
-                            <h3>Geografía</h3>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#idioma">
-                            <h3>Idioma</h3>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#bandera">
-                            <h3>Bandera</h3>
-                        </a>
-                    </li>
-                </ul>
-                <div class="tab-content">
-                    <div class="tab-pane container active textodatos" id="datos">
-                        <div class="row p-2">
-                            <div class="col">
-                                <div>
-                                    <h2 class="nombreDePaisClass" id="nombreDePais">XnombredelPais</h2>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="celdagears">
-                                    <img src="imagenes/gear.png" class="gear1">
-                                    <img src="imagenes/gearmini.png" class="gear2">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row ms-5">
-                            <div class="col">
-                                <div>
-                                    <h4>Capital: <span>nombreXCapital</span></h4>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div>
-                                    <h4>Población: <span>Xpoblacion</span></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row ms-5">
-                            <div class="col">
-                                <div>
-                                    <h4>Moneda: <span>Xmoneda</span></h4>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div>
-                                    <h4>Dominio: <span>Xdominio</span></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row ms-5">
-                            <div class="col">
-                                <div>
-                                    <h4>Símbolo Divisa: <span>Xdivisa</span></h4>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div>
-                                    <h4>Superficie: <span>Xsuperficie</span></h4>
-                                </div>
-                            </div>
-                        </div>                    
-
-                    </div>
-                    <div class="tab-pane container fade textodatos" id="geografia">
-                        <div class="row p-2">
-                            <div class="col">
-                                <div>
-                                    <h2 class="nombreDePaisClass">XnombredelPais</h2>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="celdagears">
-                                    <img src="imagenes/gear.png" class="gear1">
-                                    <img src="imagenes/gearmini.png" class="gear2">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row ms-5">
-                            <div class="col">
-                                <div>
-                                    <h4>Fronteras Terrestres: <span>XfronteraTerre</span></h4>
-                                </div>
-                            </div>
-                            <div class="col">
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="tab-pane container fade textodatos" id="idioma">
-                        <div class="row p-2">
-                            <div class="col">
-                                <div>
-                                    <h2>XnombredelPais</h2>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="celdagears">
-                                    <img src="imagenes/gear.png" class="gear1">
-                                    <img src="imagenes/gearmini.png" class="gear2">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row ms-5">
-                            <div class="col">
-                                <div>
-                                    <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                            data-bs-target="#idioma1">Idioma1</button>
-                                        <div id="idioma1" class="collapse">
-                                            <span>pais1, pais2, pais3</span>
-                                        </div>
-                                    </h4>
-                                    <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                            data-bs-target="#idioma2">Idioma2</button>
-                                        <div id="idioma2" class="collapse">
-                                            <span>pais1, pais2, pais3</span>
-                                        </div>
-                                    </h4>
-                                    <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                            data-bs-target="#idioma3">Idioma3</button>
-                                        <div id="idioma3" class="collapse">
-                                            <span>pais1, pais2, pais3</span>
-                                        </div>
-                                    </h4>
-                                    <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                            data-bs-target="#idioma4">Idioma4</button>
-                                        <div id="idioma4" class="collapse">
-                                            <span>pais1, pais2, pais3</span>
-                                        </div>
-                                    </h4>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div>
-                                    <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                            data-bs-target="#idioma5">Idioma5</button>
-                                        <div id="idioma5" class="collapse">
-                                            <span>pais1, pais2, pais3</span>
-                                        </div>
-                                    </h4>
-                                    <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                            data-bs-target="#idioma6">Idioma6</button>
-                                        <div id="idioma6" class="collapse">
-                                            <span>pais1, pais2, pais3</span>
-                                        </div>
-                                    </h4>
-                                    <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                            data-bs-target="#idioma7">Idioma7</button>
-                                        <div id="idioma7" class="collapse">
-                                            <span>pais1, pais2, pais3</span>
-                                        </div>
-                                    </h4>
-                                    <h4><button class="rounded botonidiomas" data-bs-toggle="collapse"
-                                            data-bs-target="#idioma8">Idioma8</button>
-                                        <div id="idioma8" class="collapse">
-                                            <span>pais1, pais2, pais3</span>
-                                        </div>
-                                    </h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-pane container fade textodatos" id="bandera">
-                        <div class="row p-2">
-                            <div class="col">
-                                <div>
-                                    <h2>XnombredelPais</h2>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="celdagears">
-                                    <img src="imagenes/gear.png" class="gear1">
-                                    <img src="imagenes/gearmini.png" class="gear2">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row ms-5">
-                            <div class="col">
-                                <h4>Bandera:</h4>
-                                <div>
-                                    <img class="img-fluid tarjetabandera rounded"
-                                        src="https://flagcdn.com/w320/es.png">
-                                </div>
-                            </div>
-                            <div class="col">
-                                <h4>Escudo:</h4>
-                                <div>
-                                    <img class="img-fluid tarjetabandera rounded"
-                                        src="https://mainfacts.com/media/images/coats_of_arms/es.png">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+            <div class="col megacol" id="megatabla">
+                
             </div>
         </div>
     </div>
