--- a/David/index.html
+++ b/David/index.html
@@ -8,7 +8,6 @@
     <title>Grupo 4</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="css/estilo.css">
@@ -24,7 +23,7 @@
                 <nav class="navbar-brand bg-light">
                     <div class="d-block overflow-hidden">
                         <div class="float-start" style="width: 150px; height: 120px">
-                            <img src="images/world.png" style="width: 150px; height: 120px">
+                            <img src="img/world.png" style="width: 150px; height: 120px">
                         </div>
                         <h1 class="text-center overflow-hidden"
                             style="height: 120px !important; padding-top: 40px; text-shadow: 0.1em 0.1em rgb(189, 189, 189)">
