--- a/indexdark.html
+++ b/indexdark.html
@@ -14,6 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styledark.css">
+    <script src="paises.js"></script>
 </head>
 
 <body>
@@ -87,11 +88,11 @@
                             <img src="imagenes/world.svg" width="45px" class="bg-light rounded-circle icononasa" />
                             <div class="ms-3">
                                 <p class="fw-bold mb-1">
-                                    <select name="continente" class="opcionescontinentescasilla p-0">
-                                        <option class="opcionescontinentes" value="null">Selecciona
+                                    <select name="continente" class="opcionescontinentescasilla p-0" id="seleccionarpaises" onchange="opcionescontinente(value)">
+                                        <option class="opcionescontinentes" value="continente" >Selecciona
                                             Continente</option>
                                         <option class="opcionescontinentes" value="asia">Asia</option>
-                                        <option class="opcionescontinentes" value="africa">Africa
+                                        <option class="opcionescontinentes" value="africa">África
                                         </option>
                                         <option class="opcionescontinentes" value="americas">América
                                         </option>
@@ -114,7 +115,7 @@
                         <div class="d-flex align-items-center">
                             <img src="imagenes/map-search.svg" width="45px" class="bg-light rounded-circle icononasa" />
                             <div class="ms-3">
-                                <p class="fw-bold mb-1"><select name="pais" class="opcionescontinentescasilla p-0">
+                                <p class="fw-bold mb-1"><select name="pais" class="opcionescontinentescasilla p-0" id="paises">
                                         <option class="opcionescontinentes" value="null">Selecciona
                                             País</option>
                                     </select></p>
