--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="paises.js"></script>
+  <script src="paisesPrincipal.js"></script>
+  
 </head>
 
 <body style="background-color:#75969c;">
@@ -25,7 +26,7 @@
         <div class="mt-3">
           <ul class="nav nav-tabs nav-justified">
             <li class="nav-item">
-              <a class="nav-link active" href="#">DATOS GENERALES</a>
+              <a class="nav-link active" href="#" onclick="dameDatosGeograficos()">DATOS GENERALES</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">DATOS GEOGRAFICOS</a>
@@ -61,16 +62,9 @@
 
         </select>
       </div>
-      <div class="text-center mt-4">
-        <ul>
-          <h3>frontera</h3>
-          <h3>frontera</h3>
-          <h3>frontera</h3>
-          <h3>frontera</h3>
-          <h3>frontera</h3>
-
-        </ul>
-      </div>
+      <main  class="text-center mt-4">
+      
+      </main>
 
 
     </div>
