--- a/indexPrincipal.html
+++ b/indexPrincipal.html
@@ -26,7 +26,7 @@
         <div class="mt-3">
           <ul class="nav nav-tabs nav-justified">
             <li class="nav-item">
-              <a class="nav-link active" href="#" onclick="dameDatosGeograficos()">DATOS GENERALES</a>
+              <a class="nav-link active" href="#" onclick="dameDatosGenerales()">DATOS GENERALES</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">DATOS GEOGRAFICOS</a>
